test/conformance/kuttl/reports/background/background-scan-report-deletion/02-background-scan-report.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
assert:
- background-scan-report-ready.yaml
