test/conformance/kuttl/reports/background/background-scan-report-deletion/03-delete-report.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  name: podsecurity-subrule-restricted
error:
- background-scan-report-ready.yaml
