test/conformance/kuttl/reports/background/background-scan-report-deletion/background-scan-report-assert.yaml
apiVersion: kyverno.io/v1alpha2
kind: BackgroundScanReport
metadata:
  ownerReferences:
  - apiVersion: v1
    kind: Pod
    name: badpod01
spec:
  summary:
    error: 0
    fail: 1
    pass: 0
    skip: 0
    warn: 0
