test/conformance/kuttl/reports/background/background-scan-report-deletion/background-scan-report-error.yaml
apiVersion: kyverno.io/v1alpha2
kind: BackgroundScanReport
metadata:
  ownerReferences:
  - apiVersion: v1
    kind: Pod
    name: badpod01
