test/conformance/kuttl/reports/background/background-scan-report-deletion/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: podsecurity-subrule-restricted
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
